--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "fast-check": "^4.5.3",
     "postcss": "8.4.41",
     "tailwindcss": "3.4.10"
   }
